[package]
name = "giga-segy-core"
authors = ["Aleksey Zholobenko <aleksey.zholobenko@giga-infosystems.com>"]
categories = ["science::geo"]
description = "A library containing basic structures for working with SEG-Y."
documentation = "https://docs.rs/giga_segy_core"
edition = "2018"
keywords = ["geo", "SEG-Y", "SEGY", "seismic"]
license = "MIT OR Apache-2.0"
links = ""
repository = "https://github.com/GiGainfosystems/giga-segy"
rust-version = "1.64.0"
version = "0.4.0"

[lib]
name = "giga_segy_core"
crate-type = ["staticlib","rlib"]

[dependencies]
encoding8 = "0.3"
ibmfloat = "0.1"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
serde = { version = "^1.0.103", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies.giga-segy-out]
path = "../giga-segy-out"
version = "0.4"

[build-dependencies.cbindgen]
version = "0.26"
optional = true

[features]
default = []
serde = ["dep:serde"]
to_json = ["serde", "serde_json"]
gen_cbindings = ["cbindgen"]