[package]
name = "giga-segy-in"
version = "0.3.0"
authors = ["Aleksey Zholobenko <aleksey.zholobenko@giga-infosystems.com>"]
edition = "2018"

[lib]
name = "giga_segy_in"
crate-type = ["staticlib","rlib"]

[dependencies]
giga-segy-core = { path = "../giga-segy-core" }

encoding8 = "0.3"
memmap2 = "0.5"
num = "0.4"

[features]
default = []
to_json = ["giga-segy-core/to_json"]
serde = ["giga-segy-core/serde"]
