[package]
name = "giga-segy-out"
version = "0.2.0"
authors = ["Aleksey Zholobenko <aleksey.zholobenko@giga-infosystems.com>"]
edition = "2018"

[lib]
name = "giga_segy_out"
crate-type = ["staticlib","rlib"]

[dependencies]
giga-segy-core = { path = "../giga-segy-core" }

fnv = "1"
num = "0.2"
tinyvec = { version = "1.5", features = ["alloc"] }


[dev-dependencies]
giga-segy-in = { path = "../giga-segy-in" }
tempfile = "3.3"