[package]
name = "giga-segy-out"
authors = ["Aleksey Zholobenko <aleksey.zholobenko@giga-infosystems.com>"]
description = "A library allows writing of SEG-Y."
documentation = "https://docs.rs/giga_segy_out"
edition = "2018"
keywords = ["geo", "SEG-Y", "SEGY", "seismic", "writer"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/GiGainfosystems/giga-segy"
version = "0.3.0"

[lib]
name = "giga_segy_out"
crate-type = ["staticlib","rlib"]

[dependencies]
giga-segy-core = { version = "0.3.0", path = "../giga-segy-core" }

fnv = "1"
num = "0.4"
tinyvec = { version = "1.5", features = ["alloc"] }


[dev-dependencies]
giga-segy-in = { version = "0.3.0", path = "../giga-segy-in" }
tempfile = "3.3"