[package]
name = "rsg-out"
version = "0.1.0"
authors = ["Aleksey Zholobenko <aleksey.zholobenko@giga-infosystems.com>"]
edition = "2018"

[lib]
name = "rsg_out"
crate-type = ["staticlib","rlib"]

[dependencies]
rsg-core = { path = "../rsg-core" }

fnv = "1"
num = "0.2"
tinyvec = { version = "1.5", features = ["alloc"] }


[dev-dependencies]
rsg-in = { path = "../rsg-in" }
tempfile = "3.3"